--- a/Challenge.html
+++ b/Challenge.html
@@ -34,7 +34,10 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y34LB2L9HT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
   gtag('js', new Date());
   gtag('config', 'G-Y34LB2L9HT');
 </script>
@@ -115,16 +118,7 @@
     <section class="u-clearfix u-section-2" id="sec-df93">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Join the challenge！</h3>
-        <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">1. Sign up on the 
-		<a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170" 
-		   class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1">
-			Synapse</a> website,
-		and register for the challenge on Synapse as well 
-		(<a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170" 
-		    class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1"
-		    >website</a>）<br>
-		2. Please&nbsp;fill out the <a href="files/RegistrationForm.xlsx" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-2">registration form</a>, including your team name, team members, Synaspe account, and sign the <a href="files/CMRxReconDataAccessAgreement.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-3">data agreement</a>.<br>
-		3. Send both the registration form and the data agreement to <a href="mailto:CMRxRecon@outlook.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-4">CMRxRecon@outlook.com</a>.<br>
+        <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">1. Sign up on the <a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1">Synapse</a> website.<br>2. Please&nbsp;fill out the <a href="files/RegistrationForm.xlsx" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-2">registration form</a>, including your team name, team members, Synaspe account, and sign the <a href="files/CMRxReconDataAccessAgreement.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-3">data agreement</a>.<br>3. Send both the registration form and the data agreement to <a href="mailto:CMRxRecon@outlook.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-4">CMRxRecon@outlook.com</a>.<br>
         </p>
         <p class="u-align-center u-text u-text-3">Email Format</p>
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/2023-05-062.03.45.png" alt="" data-image-width="1726" data-image-height="790">
@@ -140,11 +134,14 @@
       </div>
     </section>
     <section class="u-clearfix u-section-4" id="sec-fa8e">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Download the data</h3>
-        <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">Once we received the <a href="files/RegistrationForm.xlsx" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-1">registration form</a> and the <a href="files/CMRxReconDataAccessAgreement.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-2">data agreement </a>&nbsp;from your team, you have the access to download the data.<br>[10 May, 2023]&nbsp;Training data and&nbsp;validation data will be released. The results can be evaluated from 30 May, 2023.<br>Please follow the instructions on&nbsp;<a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-3">Synapse</a>&nbsp;to download the data.<br>We will send you the link and password to download the data (via <a href="https://onedrive.live.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-4">One Drive</a>, <a href="https://pan.baidu.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-5">
-            <span style="text-decoration: underline !important;">Baidu Netdisk</span>
-          </a>)<br>
+        <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">Once we received the <a href="files/RegistrationForm.xlsx" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-1">registration form</a> and the <a href="files/CMRxReconDataAccessAgreement.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-2">data agreement </a>&nbsp;from your team, you have the access to download the data.<br>[10 May, 2023]&nbsp;Training data and&nbsp;validation data will be released. The results can be evaluated from 30 May, 2023.<br>Please follow the instructions on&nbsp;<a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-3">Synapse</a>&nbsp;to download the data.<br>We will send you the link and password to download the data (via <span class="u-text-palette-2-base" style="text-decoration: underline !important;">
+            <a href="https://www.google.com/drive/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-4">Google Drive</a>
+          </span>,&nbsp;<a href="https://onedrive.live.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-5">One Drive</a>, and&nbsp;<span style="background-image: none; padding: 0px; text-decoration: underline !important;">
+            <a href="https://pan.baidu.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-6">Baidu Netdisk</a>)
+          </span>
+          <br>
         </p>
       </div>
     </section>
@@ -424,5 +421,16 @@ The recommended authors of the top 3 winner teams will be invited to contribute 
         <div class="u-border-1 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-opacity u-opacity-30 u-line-1"></div>
         <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
