--- a/Home.html
+++ b/Home.html
@@ -653,18 +653,19 @@ div.WordSection1
               <td class="u-table-cell u-text-grey-50 u-table-cell-4">release training and validation data</td>
             </tr>
             <tr style="height: 55px;">
-              <td class="u-grey-10 u-table-cell u-text-palette-2-base u-table-cell-5">20 - May</td>
-              <td class="u-grey-10 u-table-cell u-text-palette-2-base u-table-cell-6"> release demo code for PI
-                reconstruction </td>
+              <td class="u-grey-10 u-table-cell u-text-grey-50 u-table-cell-5">20 - May</td>
+              <td class="u-grey-10 u-table-cell u-text-grey-50 u-table-cell-6"> release demo code for PI reconstruction
+              </td>
             </tr>
             <tr style="height: 55px;">
-              <td class="u-table-cell u-text-grey-80">30 - May</td>
-              <td class="u-table-cell u-text-grey-80"> submission system opens for validation </td>
+              <td class="u-table-cell u-text-palette-2-base u-table-cell-7">30 - May</td>
+              <td class="u-table-cell u-text-palette-2-base u-table-cell-8"> submission system opens for validation
+              </td>
             </tr>
             <tr style="height: 55px;">
               <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-9">14 - July</td>
-              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-10"> deadline for STACOM placeholder paper submission
-              </td>
+              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-10"> deadline for STACOM placeholder paper
+                submission&nbsp; </td>
             </tr>
             <tr style="height: 55px;">
               <td class="u-table-cell u-text-grey-80"> 15 - July</td>
@@ -801,6 +802,17 @@ div.WordSection1
       <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
     </div>
   </footer>
+  <section class="u-backlink u-clearfix u-grey-80">
+    <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+      <span>Website Templates</span>
+    </a>
+    <p class="u-text">
+      <span>created with</span>
+    </p>
+    <a class="u-link" href="" target="_blank">
+      <span>Website Builder Software</span>
+    </a>.
+  </section>
 
 </body>
 
