--- a/STACOM.html
+++ b/STACOM.html
@@ -27,7 +27,10 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y34LB2L9HT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
   gtag('js', new Date());
   gtag('config', 'G-Y34LB2L9HT');
 </script>
@@ -120,8 +123,7 @@
           </li>
           <li>All papers will undergo a peer review process. Submit your paper through the Springer submission system (<a href="https://stacom.github.io/stacom2023/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-2">https://stacom.github.io/stacom2023/</a>) and make sure you choose the “CMRxRecon” category.
           </li>
-          <li>A paper placeholder must be submitted before <span style="font-weight: 700;">14 July</span>
-            <span style="font-weight: 700;"> 2023</span>.
+          <li>A paper placeholder must be submitted before <span style="font-weight: 700;">14</span>&nbsp;<span style="font-weight: 700;">July 2023</span>.
           </li>
           <li>Please note that your manuscript will be <span style="font-weight: 700;">considered for publication only if you successfully submit the docker container.</span>
           </li>
@@ -164,6 +166,16 @@
         <div class="u-border-1 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-opacity u-opacity-30 u-line-1"></div>
         <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
       </div></footer>
-
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
