--- a/Home.html
+++ b/Home.html
@@ -658,18 +658,17 @@ div.WordSection1
               </td>
             </tr>
             <tr style="height: 55px;">
-              <td class="u-table-cell u-text-palette-2-base u-table-cell-7">30 - May</td>
-              <td class="u-table-cell u-text-palette-2-base u-table-cell-8"> submission system opens for validation
-              </td>
+              <td class="u-table-cell u-text-grey-50 u-table-cell-7">30 - May</td>
+              <td class="u-table-cell u-text-grey-50 u-table-cell-8"> submission system opens for validation </td>
             </tr>
             <tr style="height: 55px;">
-              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-9">14 - July</td>
-              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-10"> deadline for STACOM placeholder paper
+              <td class="u-grey-10 u-table-cell u-text-grey-50 u-table-cell-9">14 - July</td>
+              <td class="u-grey-10 u-table-cell u-text-grey-50 u-table-cell-10"> deadline for STACOM placeholder paper
                 submission&nbsp; </td>
             </tr>
             <tr style="height: 55px;">
-              <td class="u-table-cell u-text-grey-80"> 15 - July</td>
-              <td class="u-table-cell u-text-grey-80"> submission system opens for test set</td>
+              <td class="u-table-cell u-text-palette-2-base u-table-cell-11"> 15 - July</td>
+              <td class="u-table-cell u-text-palette-2-base u-table-cell-12"> submission system opens for test set</td>
             </tr>
             <tr style="height: 55px;">
               <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-13">14 - Aug</td>
@@ -677,7 +676,7 @@ div.WordSection1
               </td>
             </tr>
             <tr style="height: 55px;">
-              <td class="u-table-cell u-text-grey-80"> 05 - Sep</td>
+              <td class="u-table-cell u-text-grey-80"> 15 - Sep</td>
               <td class="u-table-cell u-text-grey-80"> registration and docker submission deadline</td>
             </tr>
             <tr style="height: 55px;">
