--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       var secondEle = document.getElementById("second");
       var timer = setInterval(function(){
           clearInterval(timer);
-          location.href="Home.html";},1);
+          location.href="https://cmrxrecon.github.io/2023/";},1);
     }
   </script>
 
