feat: SEO for baidu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="">
   <meta name="description" content="">
+  <meta name="baidu-site-verification" content="codeva-JGRD6FfbX9" />
   <title>Home</title>
   <link rel="stylesheet" href="nicepage.css" media="screen">
   <link rel="stylesheet" href="Home.css" media="screen">
